# libdirutils

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  Makefile.am  README.md  STATUS  TODO  autobuild.sh  configure.ac  index.html  params.json  prebuild.sh  regen.sh
docs/: Makefile.am  footer.texi  header.texi  libdirutils.3  libdirutils.tex  libdirutils.texi  texinfo_gen.sh
example/: Makefile  example.c
scripts/: build_test.sh  clean.sh  pre-commit.sh  prebuild.sh
src/: Makefile.am  dirlist.c  dirlist.h  dirutils.c  dirutils.h  dirwalk.c
tests/: Makefile.am  dirlist_test.c  dirutils_test.c
