SUBDIRS = src tests docs

TESTS = tests/dirlist_test tests/dirutils_test
dist_noinst_DATA = LICENSE                      \
                   testdata                     \
                   README.md                    \
                   example/                     \
                   autobuild.sh

test: check
